fixed css bug where image could bleed over the link and prevent it from being clicked

--- a/app/assets/stylesheets/favorite_foods.css.scss
+++ b/app/assets/stylesheets/favorite_foods.css.scss
@@ -27,6 +27,11 @@
 	margin:5px;
 	padding: 2px;
 	vertical-align:middle; 
+
+	img {
+		max-width:50px;
+		max-height:50px;
+	}
     }
 
     h4 {
